--- a/Kernel/configs/InfiniR_umi.config.json
+++ b/Kernel/configs/InfiniR_umi.config.json
@@ -12,7 +12,7 @@
           "repo": "https://android.googlesource.com/platform/prebuilts/gas/linux-x86",
           "branch": "master",
           "name": "gas",
-          "binaryEnv": [./"bin"]
+          "binaryEnv": ["./bin"]
         },
         {
           "repo": "https://gitlab.com/ThankYouMario/android_prebuilts_clang-standalone/",
