--- a/Kernel/configs/InfiniR_umi.config.json
+++ b/Kernel/configs/InfiniR_umi.config.json
@@ -1,9 +1,9 @@
   [
     {
       "kernelSource": {
-        "name": "InfiniR",
-        "repo": "https://github.com/toraidl/InfiniR_kernel_umi.git",
-        "branch": "14.0-umi",
+        "name": "Apeiria",
+        "repo": "https://github.com/toraidl/kernel_xiaomi_umi",
+        "branch": "miui",
         "device": "umi",
         "defconfig": "umi_defconfig"
       },
