--- a/Kernel/configs/apeiria_umi.config.json
+++ b/Kernel/configs/apeiria_umi.config.json
@@ -3,7 +3,7 @@
       "kernelSource": {
         "name": "apeiria",
         "repo": "https://github.com/toraidl/kernel_xiaomi_umi.git",
-        "branch": "test",
+        "branch": "apeiria",
         "device": "umi",
         "defconfig": "umi_defconfig"
       },
